@@ -366,6 +366,8 @@ Surface.get_at(position) -> RGBA
 </tt></font><ul>
 Returns the RGB color values at a given pixel. If the
 Surface has no per-pixel alpha, the alpha will be 255 (opaque).
+A pixel outside the surface area will raise an IndexError.
+<br>&nbsp;<br>
 <br>&nbsp;<br>
 This function will need to temporarily lock the surface.
 </ul><br>&nbsp;<br>
@@ -588,7 +590,8 @@ blitting speed.
 Surface.set_at(position, RGBA) -> None
 </tt></font><ul>
 Assigns color to the image at the give position. Color can be a
-RGBA sequence or a mapped color integer.
+RGBA sequence or a mapped color integer. Setting the pixel outside
+the clip area or surface area will have no effect.
 <br>&nbsp;<br>
 In some situations just using the <a href=#fill>fill()</a> function with a one-pixel
 sized rectangle will be quicker. Also the fill function does not
